Fix DBLTR styles

--- a/sections/dbltr/background.tex
+++ b/sections/dbltr/background.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}[t]
     \centering
-    \includegraphics[width=0.45\textwidth]{figures/dbltr/file_vs_function_debloating.drawio.pdf}
+    \includegraphics[width=0.75\columnwidth]{figures/dbltr/file_vs_function_debloating.drawio.pdf}
     \caption{File vs Function level debloating based on dynamic code-coverage traces. Root of each AST denotes the entry point of the underlying PHP file. Second layer nodes denote functions, and the leaves are statements inside functions.}
     \label{fig:file_vs_func_debloating}
 \end{figure}
