--- a/sections/dbltr/experimentaldesign.tex
+++ b/sections/dbltr/experimentaldesign.tex
@@ -25,7 +25,7 @@ The main goal of this user study is to understand which features in the web appl
 
 \begin{figure*}[h]
     \centering
-    \includegraphics[]{figures/dbltr/RoleModelsFlow.pdf}
+    \includegraphics[width=0.95\columnwidth]{figures/dbltr/RoleModelsFlow.pdf}
     \caption{System Architecture of \sys{}. In Step 1, we provide the debloated web applications and user to cluster mappings to \sys{}'s content delivery module. User requests (2) are processed by \sys{}'s reverse-proxy (Step 3). After identifying the identity of the user (Steps 4-6), \sys{} internally routes the requests to the custom debloated web applications (Step 7).}
 	\label{fig:system_architecture}
 \end{figure*}
