--- a/sections/dbltr/implementation.tex
+++ b/sections/dbltr/implementation.tex
@@ -37,10 +37,10 @@ Specific to our user study, our clean up step will essentially remove newly inst
 
 \begin{figure}[]
     \centering
-    \includegraphics[width=0.45
-    \textwidth]{figures/dbltr/silhouette.pdf}
+    \includegraphics[width=0.50\textwidth]{figures/dbltr/silhouette.pdf}
     \caption{Distribution of Silhouette scores of each cluster. The average score for each cluster is marked with a solid dot and the maximum average is marked with a solid red dot.}
     \label{fig:silhouette_scores}
+    \vspace{-1em}
 \end{figure}
 
 \subsubsection{Determining the optimal number of clusters} 
