--- a/sections/dbltr/relatedwork.tex
+++ b/sections/dbltr/relatedwork.tex
@@ -1,7 +1,7 @@
 \section{Related Work} 
 The idea of software debloating was initially discussed by Zeller et al.~\cite{zeller2002simplifying} as a means to isolate failure-inducing code. 
 This idea was later applied to the context of software security to reduce the attack surface of applications. 
-Ghavamnia et al. and Rastogi et al. explored the idea of debloating containers~\cite{rastogi2017cimplifier, 259711}, while Abubakar et al. debloated the kernel~\cite{abubakar2021shard}. 
+Ghavamnia et al. and Rastogi et al. explored the idea of debloating containers~\cite{rastogi2017Cimplifier, 259711}, while Abubakar et al. debloated the kernel~\cite{abubakar2021shard}. 
 Orthogonally, another line of research explores binary debloating~\cite{snyder2017most, redini2019b, heo2018effective, quach2018debloating, qian2020slimium, ghavamnia2020temporal, mishra2020saffire, koo2019configuration}, and debloating web applications~\cite{lessismore, saphire, mininode, jahanshahi2020you}. 
 
 At a high level, there are three mainstream approaches to debloating: 
