--- a/thesis.tex
+++ b/thesis.tex
@@ -29,6 +29,7 @@
 \usepackage{multirow}
 \usepackage{fontawesome}
 \usepackage{adjustbox}
+\usepackage[htt]{hyphenat}
 
 \def\faChecked{\FA\symbol{"F00C}}
 \def\faCrossed{\FA\symbol{"F00D}}
