--- a/thesis.tex
+++ b/thesis.tex
@@ -10,8 +10,9 @@
 \usepackage{multirow}
 \usepackage{afterpage}
 \usepackage{hhline}
-\usepackage{url}
+\usepackage[hyphens]{url}
 \usepackage{hyperref} % see the file hyperref.cfg for options
+\hypersetup{breaklinks=true}
 %\usepackage{indentfirst}
 \usepackage{footmisc} % provides \footref and \mpfootnotemark commands
 \usepackage{xspace}
