Add thesis intro

--- a/ref.bib
+++ b/ref.bib
@@ -712,6 +712,28 @@
 	year         = 2012,
 	journal      = {Technical report}
 }
+@inproceedings{alhuzali2018navex,
+  title={$\{$NAVEX$\}$: Precise and scalable exploit generation for dynamic web applications},
+  author={Alhuzali, Abeer and Gjomemo, Rigel and Eshete, Birhanu and Venkatakrishnan, VN},
+  booktitle={27th USENIX Security Symposium (USENIX Security 18)},
+  pages={377--392},
+  year={2018}
+}
+@inproceedings{barron2021click,
+  title={Click This, Not That: Extending Web Authentication with Deception},
+  author={Barron, Timothy and So, Johnny and Nikiforakis, Nick},
+  booktitle={Proceedings of the 2021 ACM Asia Conference on Computer and Communications Security},
+  pages={462--474},
+  year={2021}
+}
+@inproceedings{makiou2014improving,
+  title={Improving Web Application Firewalls to detect advanced SQL injection attacks},
+  author={Makiou, Abdelhamid and Begriche, Youcef and Serhrouchni, Ahmed},
+  booktitle={2014 10th International Conference on Information Assurance and Security},
+  pages={35--40},
+  year={2014},
+  organization={IEEE}
+}
 @article{pappas2012kbouncer,
 	title        = {kBouncer: Efficient and transparent ROP mitigation},
 	author       = {Pappas, Vasilis},
@@ -831,6 +853,20 @@
 	author       = {Qian, Chenxiong and Koo, Hyungjoon and Oh, ChangSeok and Kim, Taesoo and Lee, Wenke},
 	year         = 2020,
 	booktitle    = {Proceedings of the ACM SIGSAC Conference on Computer and Communications Security}
+}
+@inproceedings{vasilakis2018breakapp,
+  title={BreakApp: Automated, Flexible Application Compartmentalization.},
+  author={Vasilakis, Nikos and Karel, Ben and Roessler, Nick and Dautenhahn, Nathan and DeHon, Andr{\'e} and Smith, Jonathan M},
+  booktitle={NDSS},
+  year={2018}
+}
+@inproceedings{jovanovic2006pixy,
+  title={Pixy: A static analysis tool for detecting web application vulnerabilities},
+  author={Jovanovic, Nenad and Kruegel, Christopher and Kirda, Engin},
+  booktitle={2006 IEEE Symposium on Security and Privacy (S\&P'06)},
+  pages={6--pp},
+  year={2006},
+  organization={IEEE}
 }
 @inproceedings{ghavamnia2020temporal,
 	title        = {Temporal system call specialization for attack surface reduction},
