--- a/sections/chapter_four_ad.tex
+++ b/sections/chapter_four_ad.tex
@@ -1,5 +1,5 @@
 \chapter{Debloating web applications via concolic emulation}
-
+\label{chap:ad}
 \section*{Preamble}
 
 So far, in the previous chapters we explored the viability of debloating web applications and proposed debloating mechanisms based on dynamic usage traces of users of the web applications to identify unused code sections and remove them through the process of debloating. 
