--- a/sections/chapter_three_dbltr.tex
+++ b/sections/chapter_three_dbltr.tex
@@ -1,4 +1,5 @@
 \chapter{Role-based debloating}
+\label{chap:dbltr}
 \section*{Preamble}
 
 \title*{Role Models: Role-based Debloating for Web Applications}
