--- a/sections/chapter_two_lim.tex
+++ b/sections/chapter_two_lim.tex
@@ -1,5 +1,5 @@
 \chapter{Quantifying the security benefits of debloating web applications}
-
+\label{chap:lim}
 \section*{Preamble}
 
 \input{sections/lim/parts/abstract}
