Add intro for LIM

--- a/ref.bib
+++ b/ref.bib
@@ -783,6 +783,13 @@
 	year         = 2021,
 	url          = {https://packagist.org/statistics}
 }
+@inproceedings{ispoglou2018block,
+  title={Block oriented programming: Automating data-only attacks},
+  author={Ispoglou, Kyriakos K and AlBassam, Bader and Jaeger, Trent and Payer, Mathias},
+  booktitle={Proceedings of the 2018 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={1868--1882},
+  year={2018}
+}
 @misc{npmstatistics,
 	title        = {NPM: Node Package Manager Statistics},
 	author       = {NPM},
