Add preamble for DBLTR

--- a/ref.bib
+++ b/ref.bib
@@ -802,6 +802,18 @@
 	year         = 2021,
 	url          = {https://pypistats.org/top}
 }
+@misc{twitterviphack,
+	title        = {A Brazen Online Attack Targets V.I.P. Twitter Users in a Bitcoin Scam},
+	author       = {The New York times},
+	year         = 2020,
+	url          = {https://www.nytimes.com/2020/07/15/technology/twitter-hack-bill-gates-elon-musk.html}
+}
+@misc{oktahack,
+	title        = {Okta hack puts thousands of businesses on high alert},
+	author       = {The Verge},
+	year         = 2021,
+	url          = {https://www.theverge.com/2022/3/22/22990637/okta-breach-single-sign-on-lapsus-hacker-group}
+}
 @misc{popularphp,
 	title        = {Packagist: Popular PHP Packages},
 	author       = {Packagist},
