Clean up abstract section title

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,8 +1,1 @@
-Software bloat has been growing
-why?
-
-LIM and debloating
-
-Taking it one step further via role based debloating
-
-future work, fully automated offline debloating.
+abstract goes here
