--- a/thesis.tex
+++ b/thesis.tex
@@ -85,9 +85,9 @@
 \maketitle %
 % \makeapproval %
 
-\begin{abstract}
+\section*{abstract}
 \input{sections/abstract}
-\end{abstract}
+% \end{abstract}
 \tableofcontents %
 \listoffigures %
 %
