--- a/sections/dbltr/conclusion.tex
+++ b/sections/dbltr/conclusion.tex
@@ -1,4 +1,4 @@
-\section{Conclusion}
+\section{Summary}
 
 In this paper, we explored the idea of ``role-based debloating'', which consists of producing multiple versions of debloated web applications, each tailored to a cluster of users with similar usage behaviors (i.e., roles). 
 We started by conducting a user study to understand how experienced developers and administrators interact with web applications. 
