--- a/sections/lim/parts/conclusion.tex
+++ b/sections/lim/parts/conclusion.tex
@@ -1,4 +1,4 @@
-\section{Conclusion}
+\section{Summary}
 %With the evolution of the Internet, web applications became more and more complex over time to offer better and richer experiences to users.
 %Simple applications that would deliver static pages before the turn of the century turned into dynamic and feature-rich applications that span thousands of files and lines of code.
 %This evolution also introduced new development paradigms like heavy code reuse through package managers.
@@ -35,10 +35,10 @@ provides tangible security benefits and therefore should be seriously
 considered as a practical way of reducing the attack surface of
 web-applications deployments.
 
-\vspace{0.5ex}
-\noindent \textbf{Acknowledgements:} We thank our shepherd Giancarlo Pellegrino
-and the anonymous reviewers for their helpful feedback.  This work was
-supported by the Office of Naval Research (ONR) under grants N00014-16-1-2264
-and N00014-17-1-2541, as well as by the National Science Foundation (NSF)
-under grants CNS-1813974 and CMMI-1842020.
+% \vspace{0.5ex}
+% \noindent \textbf{Acknowledgements:} We thank our shepherd Giancarlo Pellegrino
+% and the anonymous reviewers for their helpful feedback.  This work was
+% supported by the Office of Naval Research (ONR) under grants N00014-16-1-2264
+% and N00014-17-1-2541, as well as by the National Science Foundation (NSF)
+% under grants CNS-1813974 and CMMI-1842020.
 
