Add main abstract

--- a/sections/chapter_four_dbltr.tex
+++ b/sections/chapter_four_dbltr.tex
@@ -36,7 +36,7 @@ We empirically demonstrate that \sys{} can be 30-80\% more effective than the st
 % Discussion
 \input{sections/dbltr/discussion.tex}
 % Related Work
-\input{sections/dbltr/relatedwork.tex}
+% \input{sections/dbltr/relatedwork.tex}
 % Conclusion
 \input{sections/dbltr/conclusion.tex}
 %Acknowledgements
