--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,1 +1,24 @@
-abstract goes here
+Web applications have become an inseparable part of work and life. 
+The prevalence of online services and the remote work has paved the way for attackers to break into companies and access sensitive financial, personal, and confidential information. 
+At the same time, defenders proposed techniques to prevent the attacks or limit their damage. 
+Over the past two decades, defensive measures such as secure software development practices, network protection devices and intrusion detection systems have matured. 
+Among others, attack surface reduction is one of the important defensive concepts. 
+This concept consists of limiting the entry points to the applications which can be abused by attackers. 
+Software debloating is one of the concrete approaches for this idea, and its goal is identification and removal of unnecessary code to prevent its abuse and exploitation in future attacks. 
+
+In this dissertation, I present my work on identifying and characterizing bloat in web applications, as well as techniques to produce debloated applications while preserving their functionality for their users. 
+First, I discuss my work on quantifying the security benefits of debloating web applications. 
+In this work, we show that debloating can produce web applications that are 46\% smaller than their original versions. 
+We define various metrics to quantify the effects of debloating as meaningful security metrics including CVE reduction and removal of sensitive functions. 
+Moreover, by mapping CVEs to the source code of the applications, we demonstrated the power of debloating in removing tens of historic vulnerabilities. 
+We propose two approaches for debloating, namely file and function level debloating. 
+
+Second, I discuss the design and implementation of role-based debloating. 
+This technique is based on the observation that not all users of a web application use the same features. 
+We conducted a user study to collect first-hand information of how experienced administrators and developers interact with popular web applications. 
+Next, we design and train an unsupervised clustering model to group users with similar usage profile under a similar dynamically defined ``Role''. 
+Lastly, we build a content-delivery system based on reverse-proxies to route users transparently to their custom debloated web application and report the effectiveness of this system in debloating web applications. 
+
+We identified one of the main limitations of debloating web applications to be the collection of representative real world data on web application usage from their users. My proposal for the future work of my PhD is set to address this challenge. 
+I discuss my current progress, existing challenges and the future work on the design and implementation of a system which utilizes concolic execution to statically debloat web applications based on the readily available web server logs. 
+
